--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
 	"description": "全角文字・半角文字を変換するライブラリ",
 	"author": "ches3",
 	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/ches3/zenhan.git"
+	},
 	"type": "module",
 	"main": "./dist/index.cjs",
 	"module": "./dist/index.js",
