--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ches3/zenhan",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "全角文字・半角文字を変換するライブラリ",
 	"author": "ches3",
 	"license": "MIT",
@@ -19,7 +19,9 @@
 			"require": "./dist/index.cjs"
 		}
 	},
-	"files": ["dist"],
+	"files": [
+		"dist"
+	],
 	"scripts": {
 		"build": "tsup",
 		"test": "vitest",
